// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.not.toContainKey > fails when given object contains key 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toContainKey([22m[32mexpected[39m[2m)[22m

Expected object to not contain key:
  [32m\\"hello\\"[39m
Received:
  [31mObject {
  \\"hello\\": \\"world\\",
}[39m"
`;

exports[`.toContainKey > fails when given object does not contain key 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toContainKey([22m[32mexpected[39m[2m)[22m

Expected object to contain key:
  [32m\\"missing\\"[39m
Received:
  [31mObject {
  \\"hello\\": \\"world\\",
}[39m"
`;
